tests/invalid/loops/paren_mismatch.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    for (i: i64 = 2; ))
        a: i64 = 0;
}